--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@font-face {
+    font-family: 'OneStoreMobileGothicPop';
+    src: url('Assets/Fonts/OneStoreMobileGothicPop.ttf') format('truetype');
+}
 
 body {
     margin: 0;
+    ont-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -15,6 +20,7 @@ body {
 
 #game-container {
     position: relative;
+    ont-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     width: 100%;
     height: 100%;
     display: flex;
