--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0;
-    ont-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -20,7 +20,7 @@ body {
 
 #game-container {
     position: relative;
-    ont-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     width: 100%;
     height: 100%;
     display: flex;
@@ -40,6 +40,7 @@ canvas {
 
 .game-title {
     font-size: 28px;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     margin-bottom: 10px;
     position: relative;
     z-index: 2;
@@ -47,6 +48,7 @@ canvas {
 
 .game-subtitle {
     font-size: 14px;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     margin-bottom: 30px;
     position: relative;
     z-index: 2;
@@ -54,6 +56,7 @@ canvas {
 
 button {
     font-size: 14px;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     padding: 10px 20px;
     margin: 10px;
     background: transparent; /* 투명 버튼 */
