--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     margin: 0;
-    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
+    font-family: 'OneStoreMobileGothicPop', sans-serif;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -75,6 +75,8 @@ button:hover {
 
 /* 오프닝 화면 */
 #openingScreen {
+    font-size: 38px;
+    font-family: 'OneStoreMobileGothicPop', Arial, sans-serif;
     position: fixed;
     top: 0;
     left: 0;
